Use the close button instead of an X for the contact-us modal close button.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -196,6 +196,7 @@ a {
     box-shadow: 5px 6px 14px #888888;
     position: relative;
     .contact-close {
+      @include close-button;
       position: absolute;
       top: 5px;
       right: 5px;
