--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -45,7 +45,7 @@
 	}
 
 	.rounded-red-button {
-		border-radius: 12px;
+		border-radius: 500px;
 		margin-top: 4px;
 		font-weight: 500;
 		font-size: .9em;
@@ -90,9 +90,10 @@
 					margin-left: 34%;
 					display: inline-block;
 					> h4 {
-						color: black;
+						color: #3e3e3e;
+					  font-weight: 100;
 						font-size: 1.8em;
-						margin-bottom: 10px;
+						margin-bottom: 5px;
 					}
 				}
 			}
@@ -176,7 +177,7 @@
       border: 1px solid $primary-color;
       font-size: 1.1em;
 		  padding: 0.4em 1em;
-		  border-radius: 1em;
+		  border-radius: 500px;
 			margin-bottom: 1em;
 			cursor: pointer;
 		}
