--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -13,5 +13,6 @@ $grey: #858585;
 $title-letter-spacing: 1.3px;
 $breakpoint-small: 768px;
 $breakpoint-medium: 1600px;
+$page-max-width: 1800px; // TODO: Update references to this
 $listings-text: #de6c62;
 $brand-blue: #387ac8
