--- a/src/app/listing.scss
+++ b/src/app/listing.scss
@@ -23,17 +23,39 @@
     width: 50%;
     float: right;
     position: relative;
+    .gallery-arrow-container {
+      position: absolute;
+      width: 15%;
+      height: 15%;
+      max-width: 81px;
+      max-height: 52px;
+      bottom: 0;
+      right: 0;
+      margin: 12px;
+      border: solid;
+      border-width: 2.5px;
+    }
     .gallery-navigation {
       position: absolute;
       bottom: 10px;
+      border: solid;
+      border-width: 0 2px 2px 0;
+      padding: 3px;
+      font-size: 4em;
+      width: .35em;
+      max-width: 25px;
+      height: .35em;
+      max-height: 25px;
+      top: 25%;
+      z-index: 200;
     }
     .gallery-arrow-right {
-      right: 10px;
-      width: 25px;
+      right: 13%;
+      transform: rotate(-45deg);
     }
     .gallery-arrow-left {
-      right: 35px;
-      width: 25px;
+      left: 13%;
+      transform: rotate(135deg);
     }
   }
 
