--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -255,9 +255,9 @@ a {
     padding: 15px;
     position: relative;
     .modal-logo {
-      width: 18%;
+      width: 278px;
       position: absolute;
-      top: 15px; left: 15px;
+      top: 35px; left: 35px;
     }
     .menu-close {
       @include close-button;
