--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -85,8 +85,8 @@
   }
 
   .listing-preview {
-    width: calc(33% - 15px);
-    margin-right: 15px;
+    width: calc(33% - 10px);
+    margin-right: 10px;
     margin-bottom: 34px;
     color: gray;
     border: solid;
@@ -126,8 +126,8 @@
     .content {
       font-size: 1.1em;
       line-height: 135%;
-      padding-left: 27px;
-      padding-right: 27px;
+      padding-left: 25px;
+      padding-right: 25px;
       padding-bottom: 10px;
     }
     .footer {
@@ -143,6 +143,7 @@
     > p {
       display: inline-block;
       width: 49%;
+      white-space: nowrap;
     }
   }
 
