--- a/src/app/listing.scss
+++ b/src/app/listing.scss
@@ -67,14 +67,10 @@
     right: 10px;
   }
 
-  // .gallery-arrow-left2 {
-  //   width: 44%;
-  //   margin-right: -5px;
-  // }
-
-  // .gallery-arrow-right2 {
-  //   width: 44%;
-  // }
+  #about-google-map {
+    width: 100%;
+    height: 757px;
+  }
 
   .gallery-info {
     width: 270px;
@@ -225,6 +221,11 @@
     #header-text-listings {
       font-size: 2.5em;
     }
+
+    #about-google-map {
+      height: 378px;
+    }
+
     .listing-image-gallery {
       width: 100%;
     }
