--- a/src/app/about.scss
+++ b/src/app/about.scss
@@ -193,7 +193,7 @@
 		text-align: center;
 		color: white;
 		.title {
-			max-width: 1800px;
+			max-width: $page-max-width;
 			margin: 0 auto;
 			font-weight: bold;
 			font-size: 1.4em;
