--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -5,7 +5,7 @@
   // background-image: url(../images/listings/background.png);
   background-color: #fbfbfb;
   .content {
-    max-width: 1800px;
+    max-width: $page-max-width;
     margin: 0 auto;
   }
 
