Stop using a % for background size of ham-icon... move the menu-close button over so it is in the same position as the ham icon.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -371,7 +371,7 @@ a {
   flex-flow: row wrap;
   justify-content: center;
   margin: 0 auto;
-  max-width: $page-max-width'
+  max-width: $page-max-width;
 }
 
 .flexbox-full {
