--- a/src/app/mixins.scss
+++ b/src/app/mixins.scss
@@ -1,11 +1,11 @@
 @mixin hamburger-menu {
   background-color: white;
   background-image: url(../images/ham-menu.png);
-  background-size: 40%;
+  background-size: 2em;;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 5em;
-  width: 5em;
+  height: 3em;
+  width: 3em;
   padding: 2em;
   cursor: pointer;
   z-index: 2;
@@ -23,5 +23,5 @@
   cursor: pointer;
   padding: 30px;
   position: absolute;
-  top: 0; right: 0;
+  top: 10px; right: 10px;
 }
