--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -60,6 +60,7 @@
     padding: 22px;
     background-color: white;
     max-width: 1050px;
+    box-shadow: 0px 0px 18px 6px #f2f2f2;
     > * {
       height: 33px;
       width: 20%;
