--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -50,21 +50,21 @@
 
   .listings {
     margin: 63px auto 0;
-    width: 66%;
+    width: 70vw;
+    max-width: $page-max-width;
     > a {
       text-decoration: none;
     }
   }
 
-  .listing-filters {
-    padding: 22px;
+  .filters {
     background-color: white;
-    max-width: 1050px;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
+    padding: 15px 0;
     > * {
       height: 33px;
-      width: 20%;
-      margin: 8px;
+      width: 22%;
+      margin: 11px;
       border-color: lightgrey;
       border-style: solid;
       border-width: thin;
@@ -202,7 +202,7 @@
         width: 94%;
       }
     }
-    .listing-filters {
+    .filters {
       > * {
         width: 100%;
       }
