--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -115,11 +115,11 @@
         font-size: 1.2em;
       }
     }
-    .content {
+    .listing-content {
       font-size: 1.1em;
       line-height: 135%;
-      padding-left: 27px;
-      padding-right: 27px;
+      padding-left: 25px;
+      padding-right: 25px;
       padding-bottom: 10px;
     }
     .footer {
