--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -187,6 +187,7 @@ a {
   .contact-form {
     width: 70%;
     margin: 112px auto 0 auto;
+    font-size: 1.6em;
     padding-bottom: 10px;
     text-align: center;
     background-color: white;
@@ -205,12 +206,12 @@ a {
     .form {
       margin: 36px;
       > p {
-        font-size: 5em;
         padding-top: 75px;
         font-weight: 50;
         margin-bottom: 42px;
         color: #777777;
         opacity: .9;
+        font-size: 2em;
       }
       > input {
         display: block;
@@ -222,7 +223,6 @@ a {
         border-width: thin;
         border-color: #efefef;
         background-color: #fcfcfc !important;
-        font-size: 1.6em;
       }
       > button {
         width: 72%;
@@ -230,7 +230,6 @@ a {
         border-radius: 500px;
         margin-top: 8px;
         font-weight: 800;
-        font-size: 1.6em;
         color: $primary-color-darker-darker;
         border-color: $primary-color-darker-darker;
         border-style: solid;
@@ -692,13 +691,17 @@ a {
 
   .contact-us-modal {
     .contact-form {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      margin-top: -33px;
+      margin-top: 0;
       .form {
         margin: 0;
         > p {
           padding-top: 20px;
+          font-size: 1.8em;
         }
       }
     }
