--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -38,7 +38,7 @@
     }
   }
 
-  .plus-sign {
+  #features-toggle {
     border-color: lightgrey;
     color: lightgrey;
     border-style: solid;
@@ -46,6 +46,18 @@
     height:20px;
     width: 20px;
     display: inline-block;
+  }
+
+  .plus-sign {
+    &:after {
+      content: "+"
+    }
+  }
+
+  .minus-sign {
+    &:after {
+      content: "-"
+    }
   }
 
   .listings {
@@ -59,6 +71,7 @@
 
   .filters {
     background-color: white;
+    display: none;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
     padding: 15px 0;
     > * {
