--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -193,6 +193,7 @@ a {
     background-color: white;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
     position: relative;
+    max-width: 1200px;
     .contact-close {
       @include close-button;
       position: absolute;
