Add placeholders for the remainder of the filter items. Create a border around the selected class for the paginator on listings page. Make other minor stlye updates to listings page.

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -39,6 +39,10 @@ a {
   display: none;
 }
 
+.subdued {
+  opacity: .5;
+}
+
 #contact-us {
   background-image: url(../images/contact-map.jpg);
   background-size: cover;
