--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -61,7 +61,7 @@
   }
 
   .listings {
-    margin: 63px auto 0;
+    margin: 42px auto 0;
     width: 70vw;
     max-width: $page-max-width;
     > a {
@@ -76,6 +76,8 @@
     box-shadow: 0px 0px 18px 6px #f2f2f2;
     padding: 15px 0;
     text-align: center;
+    font-size: .7em;
+    width: 65vw;
     > * {
       height: 33px;
       width: 22%;
@@ -94,11 +96,11 @@
   .listing-preview {
     width: calc(33% - 10px);
     margin-right: 10px;
-    margin-bottom: 34px;
     color: gray;
     border: solid;
     border-width: thin;
     border-color: lightgray;
+    background-color: white;
     > a {
       text-decoration: none;
     }
@@ -137,7 +139,7 @@
       padding-right: 25px;
       padding-bottom: 10px;
     }
-    .footer {
+    .listing-preview-footer {
       border-top: solid;
       border-width: thin;
       border-color: lightgray;
@@ -172,15 +174,26 @@
     position: relative;
     font-size: 1.4em;
     color: lightgray;
-    margin: 4px 0 25px 0;
+    margin: 35px 0 35px 0;
     > div {
       display: inline-block;
       padding: 3px;
     }
     .pages {
+      font-size: .75em;
+      .selected {
+        background-color: #e6e6e6;
+        border-style: solid;
+        border-width: thin;
+        opacity: 1;
+      }
       > a {
-        padding: 12px;
+        margin: 0px;
+        padding: 7px 12px 7px 12px;
         text-decoration: none;
+        display: inline-block;
+        width: 31px;
+        height: 31px;
       }
     }
    .navigate {
@@ -198,6 +211,7 @@
     }
 
     .paginator {
+      margin-top: 0;
       > div {
         padding: 3px;
       }
@@ -205,6 +219,7 @@
 
     .listing-preview {
       width: 92%;
+      margin-bottom: 34px;
     }
     .header {
       > p {
