--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -43,6 +43,11 @@ a {
   opacity: .5;
 }
 
+#contact-us-gmap {
+  width: 100%;
+  height: 100%;
+}
+
 #contact-us {
   // background-image: url(../images/contact-map.jpg);
   position: relative;
@@ -52,7 +57,7 @@ a {
   padding: 20px;
   color: $grey;
   height: 473px;
-  #contact-us-gmap {
+  .contact-us-gmap-container {
     width: 100%;
     height: 500px;
     position: absolute;
@@ -540,6 +545,7 @@ a {
 }
 
 .footer {
+  margin-top: 12px;
   .inner {
     max-width: $page-max-width;
     margin: 0 auto;
@@ -686,8 +692,15 @@ a {
 
   #contact-us {
     padding: 0;
+    .contact-us-gmap-container {
+      position: static;
+      display: none;
+      width: 100%;
+      height: 300px;
+    }
     .contact-content {
       width: 100%;
+      position: static;
       .contact-header {
         padding: 25px 0 0 0;
         text-align: center;
@@ -812,7 +825,6 @@ a {
     }
   }
   .footer {
-    position: relative;
     background: $primary-color;
     padding: 2%;
     color: white;
