--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -77,7 +77,7 @@
     padding: 15px 0;
     text-align: center;
     font-size: .7em;
-    width: 65vw;
+    width: 70vw;
     > * {
       height: 23px;
       width: 22%;
@@ -172,32 +172,39 @@
   .paginator {
     text-align: center;
     position: relative;
-    font-size: 1.4em;
-    color: lightgray;
+    font-size: .9em;
+    color: #959595;
     margin: 35px 0 35px 0;
     > div {
       display: inline-block;
       padding: 3px;
     }
     .pages {
-      font-size: .75em;
       .selected {
         background-color: #e6e6e6;
-        border-style: solid;
+        border-style: none;
         border-width: thin;
         opacity: 1;
+        box-shadow: 0px 0px 2em gainsboro;
+      }
+      .next {
+        display: inline;
       }
       > a {
         margin: 0px;
-        padding: 7px 12px 7px 12px;
+        padding: 0px 11px 0px 11px;
+        text-align: center;
+        vertical-align: middle;
         text-decoration: none;
+        line-height: 28px;
         display: inline-block;
-        width: 31px;
-        height: 31px;
+        width: 25px;
+        height: 25px;
       }
     }
-   .navigate {
+   .navigate-page {
      color: $primary-color;
+
    }
   }
 
