--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -49,7 +49,7 @@ a {
 }
 
 #contact-us {
-  // background-image: url(../images/contact-map.jpg);
+  overflow: hidden;
   position: relative;
   background-size: cover;
   background-position: center center;
@@ -75,7 +75,8 @@ a {
       padding: 1em;
     }
     .contact-body {
-      background: rgba(255, 255, 255, 0.8);
+      font-size: 1.3em;
+      background: rgba(255, 255, 255, 0.9);
       padding: 23px 27px;
       > ul {
         list-style-type: none;
@@ -546,14 +547,13 @@ a {
 }
 
 .footer {
-  margin-top: 12px;
   .inner {
     max-width: $page-max-width;
     margin: 0 auto;
   }
   position: relative;
   background: $primary-color;
-  padding: 1%;
+  padding: 1% 1% 0 1%;
   color: white;
   & > * { line-height: 2.2; }
   .column {
