--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -48,27 +48,24 @@ a {
   height: 100%;
 }
 
-#contact-us {
-  overflow: hidden;
+#contact-us-home-section {
   position: relative;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  padding: 20px;
   color: $grey;
-  height: 473px;
+  min-height: 473px;
+  // height: 473px;
   .contact-us-gmap-container {
     width: 100%;
-    height: 500px;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
   }
   .contact-content {
+    top: 50%;
+    transform: translateY(-50%);
+    left: 1%;
     width: 50%;
-    max-width: 733px;
-    max-height: 432px;
     z-index: 2;
     position: absolute;
     .contact-header {
@@ -79,7 +76,7 @@ a {
     .contact-body {
       font-size: 1.3em;
       background: rgba(255, 255, 255, 0.9);
-      padding: 23px 27px;
+      padding: 8px 0;
       > ul {
         list-style-type: none;
         margin: 0;
