--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -64,7 +64,7 @@ a {
     top: 50%;
     transform: translateY(-50%);
     left: 1%;
-    width: 50%;
+    width: 55%;
     z-index: 2;
     position: absolute;
     .contact-header {
@@ -446,22 +446,22 @@ a {
   position: absolute;
   top: 47%;
   border: solid $primary-color;
-  border-width: 0 3px 3px 0;
+  border-width: 0 2px 2px 0;
   padding: 3px;
   font-size: 4em;
-  width: 30px;
-  height: 30px;
+  width: 18px;
+  height: 18px;
   z-index: 2;
 }
 
 .navigation-arrow-left {
   transform: rotate(135deg);
-  left: 24px;
+  left: 5%;
 }
 
 .navigation-arrow-right {
   transform: rotate(-45deg);
-  right: 24px;
+  right: 5%;
 }
 
 .review-slideshow {
@@ -487,7 +487,12 @@ a {
   img {
     display: inline-block;
     margin-right: 22px;
-    margin-top: -73px;
+    margin-top: -7%;
+    z-index: 25;
+    width: 100px;
+    border-style: solid;
+    border-radius: 500px;
+    border-color: white;
   }
 }
 
@@ -663,8 +668,7 @@ a {
     .inner {
       img {
         margin-top: 0;
-        width: 100%;
-        max-width: 90%;
+        max-width: 35%;
       }
       p {
         width: 100%;
