Properly include scss.

--- a/jekyll/ground-source/css/index.scss
+++ b/jekyll/ground-source/css/index.scss
@@ -6,6 +6,7 @@
 @import "vendor/sanitize.scss";
 @import "listing.scss";
 @import "listings.scss";
+@import "about.scss";
 @import "variables.scss";
 @import "mixins.scss";
 
