Move contact-us into a partial as well.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -30,18 +30,7 @@
     });</script>
   </head>
   <body>
-    <div class="contact-us-modal">
-      <div class="contact-form">
-        <div class="contact-close"></div>
-        <div class="form">
-          <p class="contact-us">CONTACT US</p>
-          <input type="text" placeholder=" Name">
-          <input type="text" placeholder=" Address">
-          <input type="text" placeholder=" Email">
-          <button>SUBMIT</button>
-        </div>
-      </div>
-    </div>
+    {% include contact.html %}
     <div id="top-nav">
       <ul>
         <li><a href="listings.html">LISTINGS</a></li>
