--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -25,18 +25,7 @@
   </head>
   <body>
     <div class="ham-menu"></div>
-    <div class="contact-us-modal">
-      <div class="contact-form">
-        <div class="contact-close"></div>
-        <div class="form">
-          <p class="contact-us">CONTACT US</p>
-          <input type="text" placeholder=" Name">
-          <input type="text" placeholder=" Address">
-          <input type="text" placeholder=" Email">
-          <button>SUBMIT</button>
-        </div>
-      </div>
-    </div>
+    {% include contact.html %}
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
