--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -83,51 +83,17 @@
           <div class="navigation-arrow-left navigation-arrows"></div>
           <div class="carousel-container">
             <div class="review-carousel">
-              <div class="review">
-                <img src="images/sample-person.png" />
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  <br />
-                  <br />
-                  <strong>- Jane Doe 1</strong>
-                </p>
-              </div>
-              <div class="review">
-                <img src="images/sample-person.png" />
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  <br />
-                  <br />
-                  <strong>- Jane Doe 2</strong>
-                </p>
-              </div>
-              <div class="review selected">
-                <img src="images/sample-person.png" />
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  <br />
-                  <br />
-                  <strong>- Jane Doe 3</strong>
-                </p>
-              </div>
-              <div class="review">
-                <img src="images/sample-person.png" />
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  <br />
-                  <br />
-                  <strong>- Jane Doe 4</strong>
-                </p>
-              </div>
-              <div class="review">
-                <img src="images/sample-person.png" />
-                <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-                  <br />
-                  <br />
-                  <strong>- Jane Doe 5</strong>
-                </p>
-              </div>
+              {% for testimonial in site.testimonials %}
+                <div class="review">
+                  <img src="{{ testimonial.userImg }}" />
+                  <p>
+                    {{ testimonial.text }}
+                    <br />
+                    <br />
+                    <strong>- {{ testimonial.name }}</strong>
+                  </p>
+                </div>
+              {% endfor %}
             </div>
           </div>
           <div class="navigation-arrow-right navigation-arrows"></div>
