--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -92,158 +92,33 @@
           <button type"submit">SEARCH</button>
         </div>
         <div class="flexbox listings">
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
+          {% for listing in site.listings %}
+            <div class="listing-preview">
+              <a href={{listing.url}}>
+                <div class="header">
+                  <div class="label">{{listing.label}}</div>
+                  <div class="address">
+                    <div>{{listing.address-line-1}}</div>
+                     <div>{{listing.address-line-2}}</div>
+                  </div>
                 </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
+                <div class="listing-content">
+                  <p>
+                    {{listing.short-caption}}
+                  </p>
+                  <div class="amenities">
+                    <p><img src="images/icons/door.png" /> {{listing.rooms}} Rooms</p>
+                    <p><img src="images/icons/tub.png" /> {{listing.baths}} Baths</p>
+                    <p><img src="images/icons/bed.png" /> {{listing.bedrooms}} Bedrooms</p>
+                    <p><img src="images/icons/ruler.png" /> {{listing.sq-footage}} Sq ft</p>
+                  </div>
                 </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </a>
-          </div>
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
+                <div class="listing-preview-footer">
+                  <strong>{{listing.price}}</strong> per month
                 </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </a>
-          </div>
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label">RENT</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="flexbox listings">
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </a>
-          </div>
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </a>
-          </div>
-          <div class="listing-preview">
-            <a href="listing.html">
-              <div class="header">
-                <div class="label lease">LEASE</div>
-                <div class="address">
-                  <div>2467 JEFFERSON AVE,</div>
-                  <div><strong>PLAYA</strong> VISTA</div>
-                </div>
-              </div>
-              <div class="listing-content">
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                </p>
-                <div class="amenities">
-                  <p><img src="images/icons/door.png" /> 3 Rooms</p>
-                  <p><img src="images/icons/tub.png" /> 2 Baths</p>
-                  <p><img src="images/icons/bed.png" /> 8 Bedrooms</p>
-                  <p><img src="images/icons/ruler.png" /> 3,500 Sq ft</p>
-                </div>
-              </div>
-              <div class="listing-preview-footer">
-                <strong>$4,500</strong> per month
-              </div>
-            </a>
-          </div>
+              </a>
+             </div>
+          {% endfor %}
         </div>
         <div class="paginator">
           <div class="navigate-page">&lt;-</div>
