--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -28,7 +28,7 @@
     {% include contact.html %}
     <div class="nav-modal">
       <div class="inner">
-        <img src="images/logo.png" class="modal-logo"/>
+        <img src="/images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
           <li><a href="index.html">HOME</a></li>
@@ -41,7 +41,7 @@
     </div>
 
     <div id="container-listing" class="container-fluid">
-      <img src="images/logo.png" class="logo-upper-left"/>
+      <img src="/images/logo.png" class="logo-upper-left"/>
       <div id="header-listings" class="background-header"></div>
       <div id="listings-content">
         <div id="header-text-listings">{{ page.location }}</div>
@@ -68,6 +68,7 @@
                 {% for amenity in page.amenities %}
                 <li>{{ amenity }}</li>
                 <hr>
+                {% endfor %}
               </ul>
             </div>
           </div>
@@ -87,23 +88,21 @@
               </div>
               <div class="listing-image-gallery">
                 <div class="listing-carousel">
-                  <img src="images/example.jpg" class="img-responsive"/>
-                  <img src="images/example.jpg" class="img-responsive"/>
-                  <img src="images/example.jpg" class="img-responsive"/>
+                  {% for img-src in page.gallery-images %}
+                  <img src={{ img-src }} class="img-responsive"/>
+                  {% endfor %}
                 </div>
                 <div class="gallery-arrow-container">
                   <div class="gallery-arrow-left gallery-navigation"></div>
                   <div class="gallery-arrow-right gallery-navigation"></div>
                 </div>
-                <!-- <div class="navigation-arrows2 navigation-arrow-left2"></div>
-                <div class="navigation-arrows2 navigation-arrow-right2"></div> -->
               </div>
             </div>
             <div class="info-box">
               <h2 class="title">LOCATION</h2>
               <div id="about-google-map"></div>
               <h2 class="title">FLOORPLAN</h2>
-              <img src="images/fake-plans.jpg" class="img-responsive" />
+              <img src="/images/fake-plans.jpg" class="img-responsive" />
             </div>
           </div>
         </div>
@@ -112,7 +111,7 @@
     {% include footer.html %}
     <script>
       function initListingMap() {
-        var uluru = {lat: 33.979449, lng: -118.413002};
+        var uluru = {lat: {{page.latitude}}, lng: {{page.longitude}}};
         var map = new google.maps.Map(document.getElementById('about-google-map'), {
           zoom: 12,
           scrollwheel: false,
@@ -126,7 +125,7 @@
       }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="/scripts/script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <!-- TODO replace API key -->
     <script async defer
