--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -76,14 +76,10 @@
             <div class="info-box">
               <div class="info-text">
                 <h2 class="title">
-                  <strong>CREATIVE OFFICE SPACE AT</strong></br>
-                  THE HEART OF SILICON BEACH.
+                  {{ page.info-title }}
                 </h2>
-                <p>Playa Jefferson is a dynamic office campus located in Playa Vista.
-                The campus features over 200,000 square feet of creative office space, with
-                dramatic and distincitive architecure, substantial experior shared communal
-                space, easy access to both the 90 and the 405 freeways, and is directly across
-                the street from all of the amenitite at Runway Playa Vista.
+                <p>
+                  {{ page.info-text }}
                 </p>
               </div>
               <div class="listing-image-gallery">
@@ -102,7 +98,7 @@
               <h2 class="title">LOCATION</h2>
               <div id="about-google-map"></div>
               <h2 class="title">FLOORPLAN</h2>
-              <img src="/images/fake-plans.jpg" class="img-responsive" />
+              <img src="{{ page.floorplan-image }}" class="img-responsive" />
             </div>
           </div>
         </div>
