--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -163,7 +163,7 @@
       }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
     <!-- TODO replace API key -->
     <script async defer
