--- a/css/index.scss
+++ b/css/index.scss
@@ -60,6 +60,10 @@ a {
     z-index: 1;
   }
   .contact-content {
+    max-width: $page-max-width;
+    // padding-left: $contact-home-padding(3em);
+    padding-left: calc(80px - 48px);
+    margin: 0 auto;
     top: 50%;
     transform: translateY(-50%);
     left: 1%;
@@ -74,10 +78,11 @@ a {
     .contact-body {
       font-size: 1.3em;
       background: rgba(255, 255, 255, 0.9);
-      padding: 8px 0;
+      padding: 8px 22;
       > ul {
         list-style-type: none;
         margin: 0;
+        padding-left: 20px;
         > li {
           padding: 12px;
         }
@@ -496,7 +501,7 @@ a {
 }
 
 .learn-more {
-  max-width: 55%;
+  max-width: 45%;
 }
 
 .services-info {
@@ -505,13 +510,14 @@ a {
   color: white;
   display: flex;
   .services-content {
-    max-width: 1200px;
+    padding-left: 80px;
+    max-width: 1800px;
+    margin: 0 auto;
     height: 100%;
   }
 }
 
 .services-header {
-  padding-left: 33px;
   font-size: 3em;
 }
 
@@ -524,6 +530,11 @@ a {
   padding: 3em;
   opacity: .9;
   width: 50%;
+}
+
+.services-1 {
+  margin-left: -200px;
+  padding-left: 200px;
 }
 
 .service-description {
@@ -679,7 +690,20 @@ a {
     height: 28px;
   }
 
+  // .services-info {
+  //   position: relative;
+  //   background-color: $primary-color;
+  //   color: white;
+  //   display: flex;
+  //   .services-content {
+  //     padding-left: 80px;
+  //     max-width: 1800px;
+  //     margin: 0 auto;
+  //     height: 100%;
+  //   }
+  // }
   #contact-us-home-section {
+    position: relative;
     .contact-us-gmap-container {
       display: none;
     }
