--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -95,7 +95,8 @@
 
   .listing-preview {
     width: calc(33% - 10px);
-    margin-right: 10px;
+    margin: 0 12px 12px 0;
+    margin-bottom: 10px;
     color: gray;
     background-color: white;
     box-shadow: 0px 0px 18px 6px #f2f2f2;
