--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -91,7 +91,7 @@
           <input id="max-price" type="text" placeholder=" Price" class="subdued">
           <button type"submit" id="listing-search">SEARCH</button>
         </div>
-        <div class="flexbox listings">
+        <div id="properties" class="flexbox listings">
           {% for listing in site.listings %}
              <div class="listing-preview" data-location="{{listing.address-line-2}}" data-available="{{listing.available}}" data-type="{{listing.type}}" data-rooms="{{listing.rooms}}" data-size="{{listing.sq-footage}}" data-price="{{listing.price}}">
               <a href={{listing.url}}>
@@ -121,11 +121,11 @@
           {% endfor %}
         </div>
         <div class="paginator">
-          <div class="navigate-page">&lt;-</div>
+          <div id="listings-prev" class="navigate-page">&lt;-</div>
           <div class="pages">
-            <a href="#" class="selected">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#" class="next"><strong>. . .</strong></a>
+            <a id="1" class="selected">1</a><a id="2" href="#">2</a><a id="3" href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#" class="next"><strong>. . .</strong></a>
           </div>
-          <div class="navigate-page">-&gt;</div>
+          <div id="listings-next" class="navigate-page">-&gt;</div>
         </div>
       </div>
     </div>
