Jump from last to first and first to last.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -123,7 +123,7 @@
         <div class="paginator">
           <div id="listings-prev" class="navigate-page">&lt;-</div>
           <div class="pages">
-            <a id="1" class="selected">1</a><a id="2" href="#">2</a><a id="3" href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#" class="next"><strong>. . .</strong></a>
+            <a id="1" class="selected">1</a>
           </div>
           <div id="listings-next" class="navigate-page">-&gt;</div>
         </div>
