--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -31,9 +31,9 @@
         <img src="/images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="listings.html" class="active">LISTINGS</a></li>
+          <li><a href="/index.html">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
+          <li><a href="/listings.html" class="active">LISTINGS</a></li>
           <li><a href="#">EXPERIENCE</a></li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
