--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -8,20 +8,6 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link rel="stylesheet" href="../css/main.css">
-
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-    <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:css({.tmp/serve,src}) styles/app.css -->
-    <!-- inject:css -->
-    <!-- css files will be automatically insert here -->
-    <!-- endinject -->
-    <!-- endbuild -->
   </head>
   <body>
     <div class="ham-menu"></div>
@@ -42,7 +28,11 @@
 
     <div id="container-listing" class="container-fluid">
       <img src="/images/logo.png" class="logo-upper-left"/>
-      <div id="header-listings" class="background-header"></div>
+      {% if page.property-header %}
+        <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
+      {% else %}
+        <div id="header-listings" class="background-header"></div>
+      {% endif %}
       <div id="listings-content">
         <div id="header-text-listings">{{ page.location }}</div>
         <div class="container">
