--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -80,7 +80,7 @@
   #header-listings {
     height: 75vh;
     position: relative;
-    background-image: url(../images/listings-bg.jpg);
+    background-image: url(../images/placeholder-header.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 0;
