Make agents a collection and variabalize them on the about page. Create modals for each agent and show/hide based on a data-id that matches up to each agent.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -54,6 +54,7 @@
     border-style: solid;
     border-width: thin;
     padding: 5px 20px;
+    text-transform: uppercase;
   }
 
   .bio-pic-mobile {
