--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -42,35 +42,37 @@
       </div>
     </div>
     <div id="container-about">
-      <div class="agent-details">
-        <div class="content">
-          <div class="simple-close close-agent-detail"></div>
-          <div class="header">
-            <img src="images/about/agent-bio.png" class="bio-pic"/>
-            <div class="contact">
-              <h4>JONATHAN DOE</h4>
-               <img src="images/about/agent-bio.png" class="bio-pic-mobile"/>
-              <p>Licensed Real Estate Salesperson</p>
-              <p><a href="mailto:jonathan@groundsource.com">jonathan@groundsource.com</a></p>
-              <p>M: 310.333.3333</p>
+      {% for agent in site.agents %}
+        <div class="agent-details" id="agent-{{forloop.index}}">
+          <div class="content">
+            <div class="simple-close close-agent-detail"></div>
+            <div class="header">
+              <img src="images/about/agent-bio.png" class="bio-pic"/>
+              <div class="contact">
+                <h4>{{agent.first_name}} {{agent.last_name}}</h4>
+                <img src="{{agent.avatar}}" class="bio-pic-mobile"/>
+                <p>Licensed Real Estate Salesperson</p>
+                <p><a href="mailto:{{agent.email}}">{{agent.email}}</a></p>
+                <p>M: {{agent.phone}}</p>
 
-              <button class="rounded-red-button">WORK WITH JONATHAN</buton>
+                <button class="rounded-red-button">work with {{agent.first_name}}</buton>
+              </div>
             </div>
-          </div>
-          <div class="bio">
-            <h2>ABOUT JONATHAN</h2>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-          </div>
-          <div class="footer">
-            <p>FEATURED LISTINGS</p>
-            <div class="featured-listings">
-              <img src="images/about/prop1.png" class="agent-featured-listing"/>
-              <img src="images/about/prop2.png" class="agent-featured-listing"/>
-              <img src="images/about/prop3.png" class="agent-featured-listing"/>
+            <div class="bio">
+              <h2>ABOUT JONATHAN</h2>
+              <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+            </div>
+            <div class="footer">
+              <p>FEATURED LISTINGS</p>
+              <div class="featured-listings">
+                <img src="images/about/prop1.png" class="agent-featured-listing"/>
+                <img src="images/about/prop2.png" class="agent-featured-listing"/>
+                <img src="images/about/prop3.png" class="agent-featured-listing"/>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      {% endfor %}
       <div class="main">
         <div id="header-about">
           <div class="about-text">
@@ -97,44 +99,19 @@
         </div>
         <div class="agents">
           <div class="flexbox">
-            <div class="agent">
-              <div class="bio-image">
-                <img src="images/about/agent-01.jpg"/>
-                <div class="image-title"><span>JONATHAN</span> DOE</div>
+            {% for agent in site.agents %}
+              <div class="agent">
+                <div class="bio-image">
+                  <img src="{{agent.avatar}}"/>
+                  <div class="image-title"><span>{{agent.first_name}}</span> {{agent.last_name}}</div>
+                </div>
+                <div class="short-bio">
+                  {{agent.short_bio}}
+                </div>
+                <div class="bio-button" data-agent="{{forloop.index}}">VIEW FULL BIO</div>
+                <div class="bio-contact"><span class="black">{{agent.email}}</span><br>{{agent.phone}}</div>
               </div>
-              <div class="short-bio">
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              </div>
-              <div class="bio-button">VIEW FULL BIO</div>
-              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
-            </div>
-
-            <div class="agent">
-              <div class="bio-image">
-                <img src="images/about/agent-02.jpg"/>
-                <div class="image-title"><span>JANE</span> DOE</div>
-              </div>
-              <div class="short-bio">
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              </div>
-              <div class="bio-button">VIEW FULL BIO</div>
-              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
-            </div>
-
-            <div class="agent">
-              <div class="bio-image">
-                <img src="images/about/agent-03.jpg"/>
-                <div class="image-title"><span>JONATHAN</span> DOE</div>
-              </div>
-              <div class="short-bio">
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              </div>
-              <div class="bio-button">VIEW FULL BIO</div>
-              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
-            </div>
+            {% endfor %}
           </div>
         </div>
         <div id="about-content">
