Include avatar source from variable.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,7 +47,7 @@
           <div class="content">
             <div class="simple-close close-agent-detail"></div>
             <div class="header">
-              <img src="images/about/agent-bio.png" class="bio-pic"/>
+              <img src="{{agent.avatar}}" class="bio-pic"/>
               <div class="contact">
                 <h4>{{agent.first_name}} {{agent.last_name}}</h4>
                 <img src="{{agent.avatar}}" class="bio-pic-mobile"/>
