--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -106,6 +106,7 @@
         > h2 {
           font-size: 1.8em;
           opacity: 1;
+          text-transform: uppercase;
         }
       }
       .footer {
